--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ body {
     background: transparent;
     color: white;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
@@ -97,17 +97,6 @@ body {
     color: white;
 }
 
-/* style for search result */
-.search-results-container {
-    display: none;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    height: 85%;
-    gap: 5%;
-    overflow-y: auto;
-}
 
 /* style for default search result */
 .default-container {
@@ -163,9 +152,8 @@ body {
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 100%;
-    gap: 5%;
-    overflow-y: auto;
+    height: fit-content;
+    max-height: 400px;
     background-color: rgb(60, 60, 60);
     border-radius: 10px;
 }
@@ -174,10 +162,10 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 95%;
+    width: 90%;
     height: 90%;
-    gap: 5%;
     overflow-y: auto;
+    gap: 5%;
 }
 .local-search-results-item {
     display: flex;
@@ -185,7 +173,7 @@ body {
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 60px;
+    height: 80px;
     border-radius: 10px;
     padding-top: 10px;
 }
@@ -213,3 +201,5 @@ body {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+/* style for web search result */
