--- a/index.css
+++ b/index.css
@@ -20,7 +20,13 @@
     src: url('./resources/fonts/JetBrainsMono/JetBrainsMonoNerdFontMono-BoldItalic.ttf') format('truetype');
 }
 /*-----------------------------------*/
-
+/* different background colors for different themes */
+:root {
+    --light-theme-bg: rgb(232, 232, 232);
+    --dark-theme-bg: rgb(60, 60, 60);
+    --light-theme-text: black;
+    --dark-theme-text: white;
+}
 
 body {
     font-family: 'Arial', sans-serif;
@@ -30,7 +36,7 @@ body {
     width: 100vw;
     height: 100vh;
     background: transparent;
-    color: white;
+    color: var(--dark-theme-text);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -58,7 +64,7 @@ body {
     width: 100%;
     height: 60px;
     min-height: 60px;
-    background-color: rgb(60, 60, 60);
+    background-color: var(--dark-theme-bg);
     border-radius: 10px;
 }
 .icon-container {
@@ -86,7 +92,7 @@ body {
     border: none;
     border-radius: 5px;
     padding: 5px;
-    background-color: rgb(60, 60, 60);
+    background-color: var(--dark-theme-bg);
     font-size: 20px;
 }
 .search-input-container input::placeholder {
@@ -109,7 +115,7 @@ body {
     overflow-y: hidden;
     scroll-behavior: nearest;
     scroll-snap-type: y mandatory;
-    background-color: rgb(60, 60, 60);
+    background-color: var(--dark-theme-bg);
     border-radius: 10px;
     padding-top: 10px;
 }
@@ -154,7 +160,7 @@ body {
     width: 100%;
     height: fit-content;
     max-height: 400px;
-    background-color: rgb(60, 60, 60);
+    background-color: var(--dark-theme-bg);
     border-radius: 10px;
 }
 .local-search-results {
