--- a/index.css
+++ b/index.css
@@ -21,11 +21,17 @@
 }
 /*-----------------------------------*/
 /* different background colors for different themes */
-:root {
-    --light-theme-bg: rgb(232, 232, 232);
-    --dark-theme-bg: rgb(60, 60, 60);
-    --light-theme-text: black;
-    --dark-theme-text: white;
+@media (prefers-color-scheme: light) {
+    :root {
+        --bg-color: rgb(240, 240, 240);
+        --text-color: black;
+    }
+}
+@media (prefers-color-scheme: dark) {
+    :root {
+        --bg-color: rgb(48, 48, 48);
+        --text-color: white;
+    }
 }
 
 body {
@@ -36,7 +42,7 @@ body {
     width: 100vw;
     height: 100vh;
     background: transparent;
-    color: var(--dark-theme-text);
+    color: var(--text-color);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -64,7 +70,7 @@ body {
     width: 100%;
     height: 60px;
     min-height: 60px;
-    background-color: var(--dark-theme-bg);
+    background-color: var(--bg-color);
     border-radius: 10px;
 }
 .icon-container {
@@ -77,7 +83,7 @@ body {
 .icon-container svg {
     width: 25px;
     height: 25px;
-    color: rgb(157, 157, 157);
+    color: var(--text-color);
 }
 .search-input-container {
     display: flex;
@@ -90,9 +96,9 @@ body {
     width: 100%;
     height: 100%;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 5px;
-    background-color: var(--dark-theme-bg);
+    background-color: var(--bg-color);
     font-size: 20px;
 }
 .search-input-container input::placeholder {
@@ -100,7 +106,7 @@ body {
 }
 .search-input-container input:focus {
     outline: none;
-    color: white;
+    color: var(--text-color);
 }
 
 
@@ -115,7 +121,7 @@ body {
     overflow-y: hidden;
     scroll-behavior: nearest;
     scroll-snap-type: y mandatory;
-    background-color: var(--dark-theme-bg);
+    background-color: var(--bg-color);
     border-radius: 10px;
     padding-top: 10px;
 }
@@ -129,8 +135,9 @@ body {
 }
 .selected {
     background-color: rgb(86, 91, 182);
-    color: black;
+    color: var(--text-color);
     font-weight: bold;
+    border-radius: 20px;
 }
 .default-item-icon {
     display: flex;
@@ -148,7 +155,7 @@ body {
     justify-content: flex-start;
     align-items: center;
     font-size: 20px;
-    color: white;
+    color: var(--text-color);
 }
 
 /* style for search result */
@@ -160,7 +167,7 @@ body {
     width: 100%;
     height: fit-content;
     max-height: 400px;
-    background-color: var(--dark-theme-bg);
+    background-color: var(--bg-color);
     border-radius: 10px;
 }
 .local-search-results {
@@ -191,10 +198,21 @@ body {
     width: 100%;
     height: 60%;
     font-size: 15px;
-    color: white;
+    color: var(--text-color);
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+.local-search-results-item-icon {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: fit-content;
+    height: 100%;
+}
+.local-search-results-item-icon img {
+    width: 20px;
+    height: 20px;
 }
 .local-search-results-item-content {
     display: flex;
@@ -203,7 +221,7 @@ body {
     width: 100%;
     height: 40%;
     font-size: 10px;
-    color: rgb(157, 157, 157);
+    color: var(--text-color);
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
