--- a/index.css
+++ b/index.css
@@ -1,21 +1,21 @@
 /* importing fonts */
 @font-face {
-    font-family: 'JetBrains Mono Regular';
+    font-family: 'JetBrainsMono Nerd Font Mono Regular';
     font-style: normal;
     src: url('./resources/fonts/JetBrainsMono/JetBrainsMonoNerdFontMono-Regular.ttf') format('truetype');
 }
 /*@font-face {
-    font-family: 'JetBrains Mono Bold';
+    font-family: 'JetBrainsMono Nerd Mono Bold';
     font-style: bold;
     src: url('./resources/fonts/JetBrainsMono/JetBrainsMonoNerdFontMono-Bold.ttf') format('truetype');
 }
 @font-face {
-    font-family: 'JetBrains Mono Italic';
+    font-family: 'JetBrainsMono Nerd Mono Italic';
     font-style: italic;
     src: url('./resources/fonts/JetBrainsMono/JetBrainsMonoNerdFontMono-Italic.ttf') format('truetype');
 }
 @font-face {
-    font-family: 'JetBrains Mono Bold Italic';
+    font-family: 'JetBrainsMono Nerd Mono Bold Italic';
     font-style: bold italic;
     src: url('./resources/fonts/JetBrainsMono/JetBrainsMonoNerdFontMono-BoldItalic.ttf') format('truetype');
 }
@@ -35,7 +35,7 @@
 }
 
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'JetBrainsMono Nerd Font Mono';
     font-size: 20px;
     margin: 0;
     padding: 0;
@@ -73,18 +73,6 @@ body {
     background-color: var(--bg-color);
     border-radius: 10px;
 }
-.icon-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10%;
-    height: 100%;
-}
-.icon-container svg {
-    width: 25px;
-    height: 25px;
-    color: var(--text-color);
-}
 .search-input-container {
     display: flex;
     justify-content: center;
@@ -93,6 +81,7 @@ body {
     height: 100%;
 }
 .search-input-container input {
+    font-family: 'JetBrainsMono Nerd Font Mono Regular';
     width: 100%;
     height: 100%;
     border: none;
@@ -137,7 +126,7 @@ body {
     background-color: rgb(86, 91, 182);
     color: var(--text-color);
     font-weight: bold;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 .default-item-icon {
     display: flex;
@@ -146,7 +135,6 @@ body {
     width: 10%;
 }
 .default-item-icon img {
-    border-radius: 50%;
     width: 32px;
     height: 32px;
 }
@@ -156,6 +144,7 @@ body {
     align-items: center;
     font-size: 20px;
     color: var(--text-color);
+    padding-left: 10px;
 }
 
 /* style for search result */
