--- a/index.css
+++ b/index.css
@@ -25,12 +25,14 @@
     :root {
         --bg-color: rgb(240, 240, 240);
         --text-color: black;
+        --hover-color: rgb(126, 173, 223);
     }
 }
 @media (prefers-color-scheme: dark) {
     :root {
-        --bg-color: rgb(48, 48, 48);
+        --bg-color: rgb(42, 42, 42);
         --text-color: white;
+        --hover-color: rgb(126, 173, 223);
     }
 }
 
@@ -47,6 +49,7 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    gap: 2%;
 }
 
 /* style for main container */
@@ -217,3 +220,121 @@ body {
 }
 
 /* style for web search result */
+.websearch-container {
+    display: none;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 400px;
+    height: fit-content;
+    min-height: 300px;
+    max-height: 400px;
+    background-color: var(--bg-color);
+    font-family: 'Times New Roman';
+    border-radius: 10px;
+    overflow-y: auto;
+}
+.websearch-result-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    height: fit-content;
+    min-height: 100px;
+    border-radius: 10px;
+    padding-top: 10px;
+    gap: 5px;
+}
+.websearch-result-item:hover {
+    background-color: var(--hover-color);
+    color: var(--text-color);
+    border-radius: 10px;
+}
+.websearch-result-item-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: fit-content;
+    font-size: 10px;
+    color: var(--text-color);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.websearch-result-item-title-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+}
+.websearch-result-item-title-icon img {
+    width: 30px;
+    height: 30px;
+}
+
+.websearch-result-item-title-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 30px;
+    color: var(--text-color);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.websearch-result-item-title-content-text {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 20px;
+    color: var(--text-color);
+    font-size: 12px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.websearch-result-item-title-content-host {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 100%;
+    height: 8px;
+    font-size: 10px;
+    color: var(--text-color);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.websearch-result-item-title-content-host:hover {
+    text-decoration: underline;
+}
+.websearch-result-item-content {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: fit-content;
+    font-size: 15px;
+    color: var(--text-color);
+    overflow: hidden;
+}
+.websearch-result-item-content-desc {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: self-start;
+    width: 90%;
+    height: 40px;
+    font-size: 8px;
+    color: var(--text-color);
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
